# auto-reading

./: .gitignore  CLAUDE.md  README.md  README_EN.md  config.yaml  pyproject.toml  requirements.txt
.claude/skills/insight-update/: SKILL.md
.claude/skills/paper-import/: SKILL.md
.claude/skills/paper-search/: SKILL.md
.claude/skills/start-my-day/: SKILL.md
.github/workflows/: ci.yml
config/: SKILL.md
docs/superpowers/plans/: 2026-03-16-auto-reading-phase1.md
docs/superpowers/specs/: 2026-03-16-auto-reading-design.md  2026-03-18-idea-system-design.md  2026-03-19-obsidian-cli-integration-design.md
insight-review/: SKILL.md
insight-update/scripts/: scan_recent_papers.py
lib/: __init__.py  obsidian_cli.py  scoring.py  vault.py
lib/figures/: extractor.py
lib/sources/: alphaxiv.py  arxiv_api.py  arxiv_pdf.py
paper-analyze/scripts/: generate_note.py
paper-import/scripts/: resolve_and_fetch.py
paper-search/scripts/: search_papers.py
src/auto_reading/: __init__.py  analyzer.py  cli.py  config.py  db.py  models.py  writer.py
start-my-day/: SKILL.md
start-my-day/scripts/: search_and_filter.py
tests/: conftest.py  test_alphaxiv.py  test_analyzer.py  test_arxiv_api.py  test_arxiv_pdf.py  test_cli.py  test_config.py  test_db.py  test_fetchers.py  test_figure_extractor.py  test_generate_digest.py  test_models.py  test_obsidian_cli.py  test_resolve_and_fetch.py  test_scan_recent_papers.py  test_search_and_filter.py  test_search_papers.py  test_vault.py  test_writer.py
weekly-digest/: SKILL.md
weekly-digest/scripts/: generate_digest.py
(+6 files in other folders)
