[project]
name = "auto-reading"
version = "0.1.0"
description = "LLM-driven paper tracking system for AI research"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "anthropic>=0.52.0",
    "pydantic>=2.11.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
auto-reading = "auto_reading.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
